@@ -115,16 +115,18 @@
   "mocap.scenes.element_info.info": "§l[INFORMACJE O ELEMENCIE SCENY]§r",
   "mocap.scenes.element_info.id": "§lScena/Pozycja:§r %s / %d",
   "mocap.scenes.element_info.name": "§lNazwa:§r %s",
-  "mocap.scenes.element_info.player_name.default": "§lNazwa gracza:§r §7§o[default]§r",
+  "mocap.scenes.element_info.player_name.default": "§lNazwa gracza:§r §7§o[domyślna]§r",
   "mocap.scenes.element_info.player_name.custom": "§lNazwa gracza:§r %s",
-  "mocap.scenes.element_info.skin.default": "§lSkórka:§r §7§o[default]§r",
+  "mocap.scenes.element_info.skin.default": "§lSkórka:§r §7§o[domyślna]§r",
   "mocap.scenes.element_info.skin.profile": "§lSkórka:§r gracza - %s",
   "mocap.scenes.element_info.skin.file": "§lSkórka:§r z pliku - %s",
   "mocap.scenes.element_info.skin.mineskin": "§lSkórka:§r z mineskin.org:",
-  "mocap.scenes.element_info.start_delay": "§lOpóźnienie startu:§r %s s (%d ticks)",
+  "mocap.scenes.element_info.start_delay": "§lOpóźnienie startu:§r %s s (%d ticków)",
   "mocap.scenes.element_info.offset": "§lPrzesunięcie pozycji:§r [%f; %f; %f]",
-  "mocap.scenes.element_info.player_as_entity.disabled": "§lGracz jako byt:§r §7§o[disabled]§r",
+  "mocap.scenes.element_info.player_as_entity.disabled": "§lGracz jako byt:§r §7§o[wyłączony]§r",
   "mocap.scenes.element_info.player_as_entity.enabled": "§lGracz jako byt:§r %s",
+  "mocap.scenes.element_info.entity_filter.disabled": "§lFiltr bytów:§r §7§o[wyłączony]§r",
+  "mocap.scenes.element_info.entity_filter.enabled": "§lFiltr bytów:§r %s",
   "mocap.scenes.element_info.scale.player_scale.normal": "§lSkala gracza:§r 1.0 §7§o[normalna]§r",
   "mocap.scenes.element_info.scale.player_scale.custom": "§lSkala gracza:§r %f",
   "mocap.scenes.element_info.scale.scene_scale.normal": "§lSkala sceny:§r 1.0 §7§o[normalna]§r",
@@ -267,6 +269,7 @@
   "mocap.failure.improper_player_name.too_long": "Maksymalna długość nazwy gracza to 16",
   "mocap.failure.improper_player_name.contains_spaces": "Nazwa gracza nie może zawierać spacji",
   "mocap.failure.resolve_player": "Nie udało się określić gracza - te polecenie musi zostać wywołane przez gracza!",
+  "mocap.failure.entity_filter.failed_to_parse": "Nie udało się wczytać filtra bytów - upewnij się, że ma poprawną składnię!",
 
   "mocap.warning.custom_skin_cache_limit": "§lUwaga:§r osiągnięto limit rozmiaru pamięci podręcznej własnych skórek!",
   "mocap.warning.custom_skin_cache_limit.tip": "Dołącz ponownie do świata, aby ją wyczyścić",
